test/analysis/flowanalysis/rec_obj-1.good
rec_obj-1.chpl:1: error: unable to determine type of field from nil
